--- a/playwright/package.json
+++ b/playwright/package.json
@@ -6,6 +6,7 @@
     "test": "tests"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.6.0",
     "playwright": "^1.51.0",
     "playwright-core": "^1.51.0",
     "undici-types": "^6.20.0"
