--- a/wdio/package.json
+++ b/wdio/package.json
@@ -8,5 +8,8 @@
     "@wdio/mocha-framework": "^9.11.0",
     "@wdio/spec-reporter": "^9.11.0",
     "wdio-wait-for": "^3.1.0"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^9.6.0"
   }
 }
